# PrBO_for_LIBs

./: README.md
1. EM testbed/: EM testbed (for github).ipynb  initial data of each cell.csv
2. ECM+aging model/: ECM (for github).ipynb  ECM_cal_B.pkl  ECM_cal_Ea.pkl  ECM_cyc_B.pkl  cal_aging_results_200days.pkl  ecm_temperature_0.1C.csv  ecm_temperature_0.2C.csv  ecm_temperature_0.4C.csv  ecm_temperature_0.5C.csv  ecm_temperature_0.6C.csv  ecm_temperature_0.8C.csv  ecm_temperature_1.0C.csv  ecm_temperature_1.2C.csv  ecm_temperature_1.4C.csv  ecm_temperature_1.5C.csv  ecm_temperature_1.6C.csv  ecm_temperature_1.8C.csv  ecm_temperature_2.0C.csv  semi-empirical aging model_calendar (for github).ipynb  semi-empirical aging model_cycling (for github).ipynb
3. Model runs/: 14,400 grid samples of ECM+aging model (for github).ipynb  ECM_cal_z.pkl  ECM_cyc_z.pkl  Example run of ECM+aging model (for github).ipynb  Example run of EM testbed (for github).ipynb  ecm_data_X_var5.npy  ecm_data_var5.npy  ecm_data_y_var5.npy  ecm_data_y_var5_n_div0.npy  ecm_data_y_var5_n_div1.npy  ecm_data_y_var5_n_div10.npy  ecm_data_y_var5_n_div11.npy  ecm_data_y_var5_n_div12.npy  ecm_data_y_var5_n_div13.npy  ecm_data_y_var5_n_div14.npy  ecm_data_y_var5_n_div15.npy  ecm_data_y_var5_n_div16.npy  ecm_data_y_var5_n_div17.npy  ecm_data_y_var5_n_div18.npy  ecm_data_y_var5_n_div19.npy  ecm_data_y_var5_n_div2.npy  ecm_data_y_var5_n_div3.npy  ecm_data_y_var5_n_div4.npy  ecm_data_y_var5_n_div5.npy  (+8 more)
pybamm-parameter-set-Jeong2024/: pyproject.toml
pybamm-parameter-set-Jeong2024/src/Jeong2024/: Jeong2024.py
(+40 files in other folders)
